remove styling on main to make fix issue on mobile devices (#18)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,12 +19,6 @@ h5 {
   letter-spacing: -0.075rem;
 }
 
-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .child-card {
   max-width: 720px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
